--- a/app-backend-nodejs/.env.example
+++ b/app-backend-nodejs/.env.example
@@ -13,3 +13,4 @@ sender=senderId
 amazonS3AccessKeyID=nkdsiczmczds
 amazonS3SecretAccessKey=sdunsdsd+k2D7g2OPZBy1KhMb/wZ5izABtcO
 amazonS3BucketName=bucker-name
+AWS_REGION=us-east-1
